reveal flickering fix

--- a/_assets/stylesheets/new-app.scss
+++ b/_assets/stylesheets/new-app.scss
@@ -193,3 +193,7 @@ section{
 h1 .letter {
   display: inline-block;
 }
+
+html.sr .reveal {
+    visibility: hidden;
+}
